<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="system_category">System</string>
    <string name="display_category">Display and lights</string>
    <string name="statusbar_category">Status Bar</string>
    <string name="navigation_category">Navigation</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="multitasking_category">Multi-Tasking</string>
    <string name="tweaks_dialog_title">Help Us, Help You!!</string>
    <string name="tweaks_dialog_message">There will be bugs.</string>
    <string name="tweaks_dialog_toast">READ THE WHOLE THING!</string>
    <string name="powermenu_category">Power Menu</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_reboot">Reboot</string>
    <string name="powermenu_torch">Torch</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="powermenu_soundpanel">Sound Panel</string>
    <string name="advanced_reboot_title">Advanced reboot</string>
    <string name="advanced_reboot_summary">Include options in the power menu for rebooting into recovery and bootloader</string>
    <string name="advanced_reboot_dialog_title">Advanced reboot menu</string>
    <string name="advanced_reboot_disabled">Disable</string>
    <string name="advanced_reboot_hide_on_keyguard">Hide on lock screen</string>
    <string name="advanced_reboot_show_always">Show always</string>
    <string name="power_menu_animation_title">Power menu animation</string>
    <string name="power_menu_animation_summary">Change the enter/exit animation of the power menu</string>
    <string name="power_menu_animation_dialog_title">Select power menu animation</string>
    <string name="power_menu_animation_aosp">AOSP (default)</string>
    <string name="power_menu_animation_bottom">Bottom</string>
    <string name="power_menu_animation_top">Top</string>
    <string name="power_menu_animation_rotate">Rotation</string>
    <string name="power_menu_animation_xylon">Fly</string>
    <string name="power_menu_animation_slide">Slide</string>
    <string name="power_menu_animation_turn">Turn</string>
    <string name="power_menu_animation_fly">Glow</string>
    <string name="power_menu_animation_card">3D</string>
    <string name="power_menu_animation_translucent_top">Translucent (top)</string>
    <string name="power_menu_animation_translucent_bottom">Translucent (bottom)</string>
    <string name="power_menu_transparency_title">Power menu transparency</string>
    <string name="power_menu_transparency_0">0</string>
    <string name="power_menu_transparency_10">10</string>
    <string name="power_menu_transparency_20">20</string>
    <string name="power_menu_transparency_30">30</string>
    <string name="power_menu_transparency_40">40</string>
    <string name="power_menu_transparency_50">50</string>
    <string name="superuser_category">SuperUser</string>
    <string name="substratum_category">Substratum</string>
   <string name="lockscreen_dt2s_title">Double tap to sleep on lock screen</string>
   <string name="statusbar_dt2s_title">Double tap to sleep on status bar</string>
    <string name="qs_tile_animation_category">QS tile animations</string>
    <string name="qs_tile_animation_style_title">Tiles animation style</string>
    <string name="qs_tile_animation_duration_title">Tiles animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="qs_tile_animation_style_off">No animation</string>
    <string name="qs_tile_animation_style_flip">Flip</string>
    <string name="qs_tile_animation_style_rotate">Rotate</string>
    <string name="qs_tile_animation_duration_slow">Sow</string>
    <string name="qs_tile_animation_duration_default">Default</string>
    <string name="qs_tile_animation_duration_fast">Fast</string>
    <string name="qs_tile_animation_duration_superfast">Superfast</string>
    <string name="qs_tile_animation_duration_ridiculous">Ridiculous</string>
    <string name="qs_tile_animation_interpolator_linearInterpolator">Linear</string>
    <string name="qs_tile_animation_interpolator_accelerateInterpolator">Accelerate</string>
    <string name="qs_tile_animation_interpolator_decelerateInterpolator">Decelerate</string>
    <string name="qs_tile_animation_interpolator_accelerateDecelerateInterpolator">Accelerate decelerate</string>
    <string name="qs_tile_animation_interpolator_bounceInterpolator">Bounce</string>
    <string name="qs_tile_animation_interpolator_overshootInterpolator">Overshoot</string>
    <string name="qs_tile_animation_interpolator_anticipateInterpolator">Anticipate</string>
    <string name="qs_tile_animation_interpolator_anticipateOvershootInterpolator">Anticipate overshoot</string>
    <string name="qs_set_animation_style">%1$s</string>
    <string name="qs_set_animation_duration">%1$s</string>
    <string name="qs_set_animation_interpolator">%1$s</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="nightmode_title">Nightmode</string>
    <string name="status_bar_clock_category">Status bar clock options</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_hidden">Hidden</string>
    <string name="status_bar_clock_seconds_title">Clock seconds</string>
    <string name="status_bar_clock_seconds_summary">Display seconds next to clock in status bar</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden (default)</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="battery_light_category">Battery LED settings</string>
    <string name="battery_light_enable">Enable battery light</string>
    <string name="battery_low_pulse_title">Pulse if battery low</string>
    <string name="blur_category">Blur and translucency settings</string>
    <string name="translucent_quick_settings_pref">Translucent expanded status bar</string>
    <string name="translucent_header_pref">Translucent notification panel header</string>
    <string name="translucent_notifications_pref">Translucent notifications</string>
    <string name="translucent_volume_pref">Translucent volume dialog</string>
    <string name="blurred_recent_app_enabled_pref">Blur recents background</string>
    <string name="blurred_status_bar_expanded_enabled_pref">Blur expanded status bar</string>
    <string name="status_bar_expanded_qs_settings">Layout</string>
    <string name="status_bar_expanded_qs_settings_summary">Choose the number of rows and columns</string>
    <string name="qs_cat_portrait_title">Portrait</string>
    <string name="qs_cat_landscape_title">Landscape</string>
    <string name="qs_rows_title">Rows</string>
    <string name="qs_columns_title">Columns</string>
    <string name="qs_rows_columns_1_title">1</string>
    <string name="qs_rows_columns_2_title">2</string>
    <string name="qs_rows_columns_3_title">3</string>
    <string name="qs_rows_columns_4_title">4</string>
    <string name="qs_rows_columns_5_title">5</string>
    <string name="qs_rows_columns_6_title">6</string>
    <string name="qs_rows_columns_7_title">7</string>
    <string name="qs_rows_columns_8_title">8</string>
    <string name="battery_pref_title">Battery styles</string>
    <string name="battery_style_text">Text only</string>
    <string name="battery_style_default">Default</string>
    <string name="battery_style_meter_horizontal">Horizontal bar</string>
    <string name="battery_style_circle">Circle</string>
    <string name="battery_style_droid">Droid</string>
    <string name="qs_wifi_easy_toggle_title">WiFi toggle</string>
    <string name="qs_wifi_easy_toggle_summary">Clicking turns WiFi on or off instead of taking you to settings</string>
    <string name="qs_bt_easy_toggle_title">Bluetooth toggle</string>
    <string name="qs_bt_easy_toggle_summary">Clicking turns Bluetooth on or off instead of taking you to settings</string>
    <string name="navbar_interface_title">Interface</string>
    <string name="navbar_size">Bar size</string>
    <string name="navbar_mode">Navigation mode</string>
    <string name="navbar_visibility">Enable navigation bar</string>
    <string name="navigationbar_settings_title">Navigation bar</string>
    <string name="navigationbar_settings_summary">Customize navigation style and behavior</string>
    <string name="navbar_general_title">Advanced</string>
    <string name="navigation_bar_left_title">Left-handed mode</string>
    <string name="navigation_bar_left_summary">Place the navigation bar on the left side of the screen in landscape mode</string>
    <string name="info_pref_note_title">Note</string>
    <string name="smartbar_interface">SmartBar</string>
    <string name="icon_pack_picker_dialog_title">Icon packs</string>
    <string name="invalid_icon_from_uri">Unable to load image from content provider</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="default_string">Default</string>
    <string name="reset">Reset</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="fling_settings">Fling settings</string>
    <string name="fling_interface">Fling</string>
    <string name="fling_enable_title">Enable Fling</string>
</resources>