<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/display_category"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

         <PreferenceScreen
            android:key="substratum"
            android:layout="@layout/preference_substratum"
            android:title="@string/substratum_category" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="projekt.substratum"
                android:targetClass="projekt.substratum.LauncherActivity" />
         </PreferenceScreen>

         <PreferenceScreen
            android:key="nightmode"
            android:layout="@layout/preference_nightmode"
            android:title="@string/nightmode_title" >
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.NightModeFragmentActivity" />
         </PreferenceScreen>

   <PreferenceCategory
        android:key="battery_light_cat"
        android:title="@string/battery_light_category" >

   <com.jisoo.tweaks.preference.SystemSettingSwitchPreference
        android:key="battery_light_enabled"
        android:title="@string/battery_light_enable"
        android:persistent="false"/>

   <com.jisoo.tweaks.preference.SystemSettingSwitchPreference
        android:key="battery_light_pulse"
        android:title="@string/battery_low_pulse_title"
        android:dependency="battery_light_enabled"
        android:persistent="false" />

   </PreferenceCategory>

</PreferenceScreen>
