<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/system_category"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

         <Preference
            android:key="powermenu"
            android:fragment="com.jisoo.tweaks.fragments.PowerMenu"
            android:layout="@layout/preference_powermenu"
            android:title="@string/powermenu_category" />

         <PreferenceScreen
            android:key="superuser"
            android:layout="@layout/preference_superuser"
            android:title="@string/superuser_category" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="me.phh.superuser"
                android:targetClass="com.koushikdutta.superuser.MainActivity" />
         </PreferenceScreen>

         <PreferenceScreen
            android:key="substratum"
            android:layout="@layout/preference_substratum"
            android:title="@string/substratum_category" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="projekt.substratum"
                android:targetClass="projekt.substratum.LauncherActivity" />
         </PreferenceScreen>

</PreferenceScreen>
